Added create new discount endpoint for owner and its implementation
