# src/Router.ts
@@ -1,38 +1,40 @@
 import * as express from 'express'
 import cors from 'cors'
-import {Logger} from "tslog"
+import { Logger } from "tslog"
+import {getDiscounts} from './controller/admin.controller'
+import {createNewDiscount} from './controller/admin.controller'
+import {getReport} from './controller/admin.controller'
+import {getAvailableDiscount} from './controller/customer.controller'
+import {purchaseWithDiscount} from './controller/customer.controller'
+import {purchaseWithoutDiscount}from './controller/customer.controller'
 
 class Router {
 
     constructor(server: express.Express) {
         const router = express.Router()
 
-        let currentDiscount: Discount = {} as Discount;
         let currentTransactionNumber: number = 1;
         const log: Logger = new Logger;
 
-        const discounts = new Array()
+        const storeDiscounts = new  Map<number,Discount> ();  
+        let storeTransactions = new Array<Transaction>();
 
-
+        //FOR ADMIN/OWNER
         //get all discounts
         router.get('/discounts', cors(), (req: express.Request, res: express.Response) => {
-            log.info("About to get list of discounts")
-            let discount: Discount = {} as Discount;
-            discounts.push(discount); 
-            res.json({
-                discounts
-            })
+            getDiscounts(req,res,storeDiscounts);
         });
-        router.get('/', (req: express.Request, res: express.Response) => {
-            res.json({
-                message: `App is up and running`
-            })
-        })
+        //create new discounts 
+        router.post('/new/discount', cors(), (req: express.Request, res: express.Response) => {
+            createNewDiscount(req,res,storeDiscounts);
+        });
+
 
         router.options('*', cors());
 
         server.use('/', router)
     }
-}
 
+
+}
 export default Router;
